cls.newInstance() causing warnings replaced with cls.getDeclaredConstructor().newInstance()